k8s/fastapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: railresolve-fastapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: railresolve-fastapi
  template:
    metadata:
      labels:
        app: railresolve-fastapi
    spec:
      containers:
        - name: fastapi
          image: ghcr.io/reyanshsharma9007-work/railresolve-fastapi:latest
          ports:
            - containerPort: 8000

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: railresolve-fastapi
spec:
  selector:
    app: railresolve-fastapi
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
