k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: railresolve-ingress
  namespace: railresolve
spec:
  ingressClassName: nginx
  rules:
    - host: railresolve.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: railresolve-express
                port:
                  number: 5000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: railresolve-frontend
                port:
                  number: 80
